--- a/deno.json
+++ b/deno.json
@@ -11,8 +11,8 @@
     "preact": "https://esm.sh/preact@10.24.3",
     "preact/": "https://esm.sh/preact@10.24.3/",
     "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.5.11",
-    "@preact/signals": "https://esm.sh/*@preact/signals@1.3.0",
-    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.8.0",
+    "@preact/signals": "npm:@preact/signals@1.3.0",
+    "@preact/signals-core": "npm:@preact/signals-core@1.8.0",
     "tabler_icons_tsx/": "https://deno.land/x/tabler_icons_tsx@0.0.7/",
     "tailwindcss": "npm:tailwindcss@3.4.1",
     "tailwindcss/": "npm:/tailwindcss@3.4.1/",
